Fix margins and text-align for headers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@ body {
   font-size: 110%;
 }
 
+h1,
+h2,
+h3 {
+  text-align: left;
+}
+
 h2 {
   margin: 2vh 0;
 }
